# ZeroStudioNew

./: .gitignore  .gitmodules  .nyx.yml  LICENSE  LICENSE2  README.md  build.gradle.kts  cpp.json  c语言文件后缀  deps.txt  git  gradle.properties  kill_gradle_java.sh  package-lock.json  package.json  settings.gradle.kts  signing.properties  translate_android.py  zerogit
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: BUG.yml  FEATURE.yml
.github/workflows/: Resources-string-translation-i18n.yml  build-apk.yml  build.yml  build_libs_and_unsigned_apk.yml  build_unsigned_apk_only.yml  crowdin_contributors.yml  gradle.yml  log_build_libs_and_unsigned_apk.yml  print_path.yml  release.yml  test - lg2 sha256.yml
.nyx/: CHANGELOG.tpl
StringTranslation/values-ar-rSA/: strings.xml
StringTranslation/values-bn-rIN/: strings.xml
StringTranslation/values-de-rDE/: strings.xml
StringTranslation/values-es-rES/: strings.xml
StringTranslation/values-fr-rFR/: strings.xml
StringTranslation/values-hi-rIN/: strings.xml
StringTranslation/values-in-rID/: strings.xml
StringTranslation/values-pt-rBR/: strings.xml
StringTranslation/values-ro-rRO/: strings.xml
StringTranslation/values-ru-rRU/: strings.xml
StringTranslation/values-tm-rTM/: strings.xml
StringTranslation/values-tr-rTR/: strings.xml
StringTranslation/values-zh-rCN/: strings.xml
StringTranslation/values-zh-rTW/: strings.xml
annotation/annotations/: build.gradle.kts
annotation/processors/: build.gradle.kts
annotation/processors-ksp/: build.gradle.kts
changelogs/: v2026xxxxxx-zh.md
composite-builds/: settings.gradle.kts
composite-builds/build-deps/: build.gradle.kts  gradle.properties  settings.gradle.kts
composite-builds/build-deps-common/: gradle.properties  settings.gradle.kts
composite-builds/build-logic/: build.gradle.kts  gradle.properties  settings.gradle.kts
core/: init.gradle  log-plugin.jar1
core/actions/: build.gradle.kts
core/app/: .gitignore  build.gradle.kts  proguard-rules.pro
core/chatai/: build.gradle.kts  settings.gradle.kts
core/common/: build.gradle.kts
core/git/: bug.txt  build.gradle.kts  proguard-rules.pro
core/indexing-api/: build.gradle.kts
core/indexing-core/: build.gradle.kts
core/kotlin/: build.gradle.kts  proguard-rules.pro
core/layout-editor/: .gitignore  README.md  build.gradle.kts
core/lsp-api/: LSP_PROTOCOL_GAP_REPORT.md  build.gradle.kts
core/lsp-models/: build.gradle.kts
core/lsp-rpc/: build.gradle.kts
core/projects/: build.gradle.kts
core/resources/: build.gradle.kts
core/zero-mcp-server/: build.gradle.kts
docs/: adoptium-jdk.txt  replace_package.py  报告.html  报告1.html  报告2.html
docs/About/: How-to-build-ZeroStudio.md
docs/AndroidSdkTool/: idesetup.sh  manifest.json
docs/Highlight_JSON_docs/: generate_highlight_json2.py  generate_structured_scm.py
docs/TODO/: 底部抽屉符号列表工具栏
docs/TODO/as/: 文档.txt
docs/intellij-c-cpp-lsp-main/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
docs/lsp/: LSP_GAP_ANALYSIS_2026-04-02.md
docs/resources/: 图标.tar.zst  符号图标s.tar.zst
docs/script/: toml-kts-migrate.py
docs/归档/: KotlinFormatter (1).kt  KotlinFormatter.kt  LuaServer.kt  OverrideMethodsAction.kt
editor/api/: build.gradle.kts
editor/editor-lsp/: build.gradle.kts
editor/impl/: LspCodeActionManager.kt  LspCompletionProvider.kt  LspDiagnosticHandler.kt  LspEditorBridge.kt  LspEditorBridge2.kt  LspFeatureRegistry.kt  WorkspaceEditExecutor.kt  build.gradle.kts
editor/lexers2/: build.gradle.kts
editor/tree-sitter-ndk/: DartLanguage.kt  MarkdownLanguage.kt  PhpLanguage.kt  PythonLanguage.kt  SqliteLanguage.kt  TypeScriptLanguage.kt  docs.md  reStructuredTextLanguage.kt
editor/tree-sitter-ndk/go/src/main/cpp/: CMakeLists.txt  tree-sitter-go.cpp  ts__onload.h  ts_go.h
editor/tree-sitter-ndk/markdown/src/main/cpp/: CMakeLists.txt  tree-sitter-markdown.cpp  ts__log.h  ts__onload.h  ts_markdown.h
editor/tree-sitter-ndk/php/src/main/cpp/: CMakeLists.txt  tree-sitter-php.cpp  ts__log.h  ts__onload.h  ts_php.h
editor/treesitter/: build.gradle.kts
event/eventbus/: build.gradle.kts
event/eventbus-android/: build.gradle.kts
event/eventbus-events/: build.gradle.kts
gradle/: libs.versions.toml
highlights.scm/: highlights.scm  locals.scm
java/javac-services/: build.gradle.kts
java/lsp/: build.gradle.kts
kotlinc/: settings.gradle
kotlinc/lib/: build.gradle
language-lexer/: build.gradle.kts  settings.gradle.kts
language-lexer/cmake/: build.gradle.kts
language-lexer/css3/: build.gradle.kts
language-lexer/csv/: build.gradle.kts
language-lexer/ecmascript/: build.gradle.kts
language-lexer/groovy/: build.gradle.kts
language-lexer/html/: build.gradle.kts
language-lexer/javascript/: build.gradle.kts
language-lexer/json/: build.gradle.kts
language-lexer/json5/: build.gradle.kts
language-lexer/kotlin/: build.gradle.kts
language-lexer/kotlinformal/: build.gradle.kts
language-lexer/properties/: build.gradle.kts
language-lexer/protobuf3/: build.gradle.kts
language-lexer/smali/: build.gradle.kts
lsp/: AbstractLanguageServer.kt  LspCommandExecutor.kt  LspEditorBridge.kt  LspHoverManager.kt  LspInlayHintManager.kt  LspSemanticTokenManager.kt  LspServiceConnector.kt  LspSignatureHelpManager.kt  LspSymbolManager.kt  LspThemeBridge.kt
modules/image-preview/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
modules/image-preview/src/main/cpp/: thorvg-jni.cpp
modules/image-preview/src/main/java/android/zero/studio/images/preview/: ThorVG.kt
modules/image-preview/src/main/java/android/zero/studio/images/preview/ui/: FileInfoBottomSheet.kt  HistogramView.kt  ImagePreviewFragment.kt  ThorVGImageView.kt
modules/image-preview/src/main/java/android/zero/studio/images/preview/utils/: ImageFileInfo.kt
modules/image-preview/src/main/res/layout/: dialog_image_details.xml  fragment_image_preview.xml
modules/image-preview/src/main/res/menu/: menu_image_preview.xml
modules/zero-regular-preview/src/main/cpp/: CMakeLists.txt  zero_preview_jni.c
tooling/: 性能方案.txt
utilities/: treeview.tar.zst
(+9080 files in other folders)
